--- a/025_Exercises.ipynb
+++ b/025_Exercises.ipynb
@@ -36,12 +36,12 @@
       "metadata": {
         "id": "004x5utgKJyW"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "Q709N1-9JMFX",
         "outputId": "1992c584-48d9-4197-8566-ee2a1bd26135",
@@ -438,36 +438,97 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "voG4aR9RJMFY"
       },
       "outputs": [],
       "source": [
-        "def sgd():\n",
-        "    # your code goes here\n",
-        "    pass"
+        "def sgd(x, y, alpha, iteration):\n",
+        "    rows, cols = x.shape\n",
+        "    weights = np.ones(cols)\n",
+        "    bias = 1\n",
+        "\n",
+        "    for _ in range(iteration):\n",
+        "        prediction = np.dot(x, weights) + bias\n",
+        "        delta = y - prediction\n",
+        "\n",
+        "        gradient_weights = -2 * np.dot(x.T, delta) / np.linalg.norm(x) ** 2\n",
+        "        gradient_bias = -2 * np.mean(delta)\n",
+        "\n",
+        "        weights -= alpha * gradient_weights\n",
+        "        bias -= alpha * gradient_bias\n",
+        "\n",
+        "    return bias, weights"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "Gj-0FCELJMFZ"
+        "id": "Gj-0FCELJMFZ",
+        "outputId": "e618f741-fbed-486e-ce0a-dc47b2576760",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Comparison of SGD Weights for Different Iterations:\n",
+            "\n",
+            "Iterations: 1000\n",
+            "  Bias: -120.122501\n",
+            "  Weight: 1.266796\n",
+            "\n",
+            "Iterations: 3000\n",
+            "  Bias: -170.819960\n",
+            "  Weight: 1.555043\n",
+            "\n",
+            "Iterations: 10000\n",
+            "  Bias: -181.890861\n",
+            "  Weight: 1.617988\n",
+            "\n",
+            "Lasso sklearn Weights:\n",
+            "  Bias: -180.857909\n",
+            "  Weight: 1.617765\n"
+          ]
+        }
+      ],
       "source": [
-        "x = np.array([188, 181, 197, 168, 167, 187, 178, 194, 140, 176, 168, 192, 173, 142, 176]).reshape(-1, 1).reshape(15,1)\n",
-        "y = np.array([141, 106, 149, 59, 79, 136, 65, 136, 52, 87, 115, 140, 82, 69, 121]).reshape(-1, 1).reshape(15,1)\n",
+        "from sklearn.linear_model import Lasso\n",
         "\n",
-        "x = np.asmatrix(np.c_[np.ones((15,1)),x])\n",
+        "x = np.array([188, 181, 197, 168, 167, 187, 178, 194, 140, 176, 168, 192, 173, 142, 176]).reshape(-1, 1).reshape(15, 1)\n",
+        "y = np.array([141, 106, 149, 59, 79, 136, 65, 136, 52, 87, 115, 140, 82, 69, 121]).reshape(-1, 1).reshape(15, 1)\n",
         "\n",
+        "x = np.c_[np.ones((15, 1)), x]\n",
         "I = np.identity(2)\n",
         "alpha = 0.1\n",
         "\n",
+        "w = np.linalg.inv(x.T @ x + alpha * I) @ x.T @ y\n",
+        "w = w.ravel()\n",
         "\n",
-        "w = np.linalg.inv(x.T*x + alpha * I)*x.T*y # update this line\n",
-        "w=w.ravel()\n"
+        "\n",
+        "iterations_list = [1000, 3000, 10000]\n",
+        "\n",
+        "print(\"Comparison of SGD Weights for Different Iterations:\")\n",
+        "for iterations in iterations_list:\n",
+        "    bias_sgd, weights_sgd = sgd(x, y.flatten(), alpha, iterations)\n",
+        "    print(f\"\\nIterations: {iterations}\")\n",
+        "    print(f\"  Bias: {bias_sgd:.6f}\")\n",
+        "    print(f\"  Weight: {weights_sgd[1]:.6f}\")\n",
+        "\n",
+        "lasso = Lasso(alpha=alpha)\n",
+        "lasso.fit(x[:, 1:], y.ravel())\n",
+        "lasso_weights = np.hstack([lasso.intercept_, lasso.coef_[0]])\n",
+        "\n",
+        "print(\"\\nLasso sklearn Weights:\")\n",
+        "print(f\"  Bias: {lasso_weights[0]:.6f}\")\n",
+        "print(f\"  Weight: {lasso_weights[1]:.6f}\")\n",
+        "\n",
+        "\n"
       ]
     },
     {
