--- a/065_SVM_Exercises.ipynb
+++ b/065_SVM_Exercises.ipynb
@@ -25,11 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sklearn.datasets import load_iris\n",
     "\n",
     "def build_kernel(data_set, kernel_type='linear',degree=3):\n",
     "    kernel = np.dot(data_set, data_set.T)\n",
@@ -59,42 +60,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def choose_set_for_label(data_set, label):\n",
-    "    # your code here\n",
-    "    return train_data_set, test_data_set, train_labels, test_labels"
+    "def choose_set_for_label(data_set, labels, classes):\n",
+    "    mask = np.isin(labels, classes)\n",
+    "    filtered_data = data_set[mask]\n",
+    "    filtered_labels = labels[mask]\n",
+    "    train_labels = np.where(filtered_labels == classes[0], -1, 1)\n",
+    "\n",
+    "    return filtered_data, train_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_labels_count(data_set):\n",
-    "    return labels_count"
+    "    return len(np.unique(data_set))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Use the code that we have implemented earlier:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(train_data_set, train_labels, kernel_type='linear', C=10, threshold=1e-5):\n",
     "    kernel = build_kernel(train_data_set, kernel_type=kernel_type)\n",
+    "    objects_count = len(train_data_set)\n",
     "\n",
     "    P = train_labels * train_labels.transpose() * kernel\n",
     "    q = -np.ones((objects_count, 1))\n",
@@ -157,18 +161,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  9.0982e+01 -9.5636e+02  2e+03  1e-01  2e-15\n",
+      " 1:  4.7786e+01 -9.4909e+01  2e+02  5e-03  2e-15\n",
+      " 2:  5.1544e+00 -1.3650e+01  2e+01  7e-16  2e-15\n",
+      " 3: -7.1636e-01 -3.2627e+00  3e+00  2e-16  8e-16\n",
+      " 4: -1.1914e+00 -1.7466e+00  6e-01  2e-16  3e-16\n",
+      " 5: -1.3686e+00 -1.5661e+00  2e-01  2e-16  2e-16\n",
+      " 6: -1.4291e+00 -1.4833e+00  5e-02  2e-16  2e-16\n",
+      " 7: -1.4542e+00 -1.4601e+00  6e-03  2e-16  2e-16\n",
+      " 8: -1.4564e+00 -1.4565e+00  1e-04  2e-16  2e-16\n",
+      " 9: -1.4564e+00 -1.4564e+00  2e-06  2e-16  2e-16\n",
+      "10: -1.4564e+00 -1.4564e+00  2e-08  2e-16  2e-16\n",
+      "Optimal solution found.\n",
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  1.0498e+02 -1.0701e+03  2e+03  1e-01  2e-15\n",
+      " 1:  5.3584e+01 -1.0896e+02  2e+02  5e-03  2e-15\n",
+      " 2:  5.7517e+00 -1.5619e+01  2e+01  4e-16  2e-15\n",
+      " 3: -8.8834e-01 -3.7649e+00  3e+00  2e-16  8e-16\n",
+      " 4: -1.4296e+00 -2.1699e+00  7e-01  1e-16  3e-16\n",
+      " 5: -1.6392e+00 -1.9091e+00  3e-01  2e-16  2e-16\n",
+      " 6: -1.7256e+00 -1.8093e+00  8e-02  2e-16  2e-16\n",
+      " 7: -1.7463e+00 -1.7640e+00  2e-02  2e-16  2e-16\n",
+      " 8: -1.7520e+00 -1.7561e+00  4e-03  2e-16  2e-16\n",
+      " 9: -1.7534e+00 -1.7538e+00  4e-04  3e-16  2e-16\n",
+      "10: -1.7536e+00 -1.7536e+00  6e-06  3e-16  2e-16\n",
+      "11: -1.7536e+00 -1.7536e+00  6e-08  2e-16  2e-16\n",
+      "Optimal solution found.\n",
+      "     pcost       dcost       gap    pres   dres\n",
+      " 0:  7.9862e+01 -9.9105e+02  2e+03  2e-01  2e-15\n",
+      " 1:  4.6431e+01 -9.7929e+01  2e+02  6e-03  2e-15\n",
+      " 2:  5.4577e+00 -1.3520e+01  2e+01  4e-16  2e-15\n",
+      " 3: -5.9742e-01 -3.1742e+00  3e+00  3e-16  1e-15\n",
+      " 4: -1.1401e+00 -1.6286e+00  5e-01  2e-16  3e-16\n",
+      " 5: -1.2510e+00 -1.3849e+00  1e-01  2e-16  2e-16\n",
+      " 6: -1.3104e+00 -1.3945e+00  8e-02  2e-16  2e-16\n",
+      " 7: -1.3265e+00 -1.3371e+00  1e-02  3e-16  2e-16\n",
+      " 8: -1.3300e+00 -1.3302e+00  2e-04  2e-16  2e-16\n",
+      " 9: -1.3301e+00 -1.3301e+00  2e-06  4e-16  2e-16\n",
+      "10: -1.3301e+00 -1.3301e+00  2e-08  2e-16  2e-16\n",
+      "Optimal solution found.\n",
+      "Accuracy: 0.6500\n"
+     ]
+    }
+   ],
    "source": [
-    "# modify this part \n",
-    "lambdas, support_vectors, support_vectors_id, b, targets, vector_number = train(train_data_set, train_labels, kernel_type='rbf')\n",
-    "predicted = classify_rbf(test_data_set, train_data_set, lambdas, targets, b, vector_number, support_vectors, support_vectors_id)\n",
-    "predicted = list(predicted.astype(int))\n",
-    "\n",
+    "from sklearn.datasets import load_iris\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import cvxopt\n",
+    "from itertools import combinations\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "print(accuracy_score(predicted, test_labels))"
+    "iris = load_iris()\n",
+    "data_set = iris.data\n",
+    "labels = iris.target\n",
+    "\n",
+    "train_data_set, test_data_set, train_labels, test_labels = train_test_split(\n",
+    "    data_set, labels, test_size=0.4, random_state=16\n",
+    ")\n",
+    "\n",
+    "labels_combinations = list(combinations(range(get_labels_count(labels)), 2))\n",
+    "\n",
+    "votes = np.zeros((len(test_data_set), get_labels_count(labels)))\n",
+    "\n",
+    "for classes in labels_combinations:\n",
+    "    filtered_data, binary_labels = choose_set_for_label(train_data_set, train_labels, classes)\n",
+    "    \n",
+    "    lambdas, support_vectors, support_vectors_id, b, targets, vector_number = train(\n",
+    "        filtered_data, binary_labels, kernel_type='rbf'\n",
+    "    )\n",
+    "    \n",
+    "    predicted_labels = classify_rbf(\n",
+    "        test_data_set, filtered_data, lambdas, targets, b, vector_number, support_vectors, support_vectors_id\n",
+    "    )\n",
+    "    \n",
+    "    assigned_classes = np.where(predicted_labels.flatten() == -1, classes[0], classes[1])\n",
+    "\n",
+    "    for idx, cls in enumerate(assigned_classes):\n",
+    "        votes[idx, cls] += 1\n",
+    "\n",
+    "final_predictions = np.argmax(votes, axis=1)\n",
+    "\n",
+    "accuracy = accuracy_score(test_labels, final_predictions)\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n"
    ]
   }
  ],
