--- a/106_NLP_Exercises.ipynb
+++ b/106_NLP_Exercises.ipynb
@@ -137,16 +137,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence 1: When we fulfill this vision, when we celebrate our 250 years of glorious freedom, we will look back on tonight as when this new chapter of American greatness began.\n",
+      "Nouns: we, this vision, we, our 250 years, glorious freedom, we, tonight, this new chapter, American greatness\n",
+      "----------------------------------------\n",
+      "Sentence 2: The time for small thinking is over.\n",
+      "Nouns: The time, small thinking\n",
+      "----------------------------------------\n",
+      "Sentence 3: The time for trivial fights is behind us.\n",
+      "Nouns: The time, trivial fights, us\n",
+      "----------------------------------------\n",
+      "Sentence 4: We just need the courage to share the dreams that fill our hearts, the bravery to express the hopes that stir our souls, and the confidence to turn those hopes and those dreams into action.\n",
+      "Nouns: We, the courage, the dreams, that, our hearts, the bravery, the hopes, that, our souls, the confidence, those hopes, those dreams, action\n",
+      "----------------------------------------\n",
+      "Sentence 5: From now on, America will be empowered by our aspirations, not burdened by our fears; inspired by the future, not bound by failures of the past; and guided by our vision, not blinded by our doubts.\n",
+      "Nouns: America, our aspirations, our fears, the future, failures, the past, our vision, our doubts\n",
+      "----------------------------------------\n",
+      "Sentence 6: I am asking all citizens to embrace this renewal of the American spirit.\n",
+      "Nouns: I, all citizens, this renewal, the American spirit\n",
+      "----------------------------------------\n",
+      "Sentence 7: I am asking all Members of Congress to join me in dreaming big and bold, and daring things for our country.\n",
+      "Nouns: I, all Members, Congress, me, things, our country\n",
+      "----------------------------------------\n",
+      "Sentence 8: I am asking everyone watching tonight to seize this moment.\n",
+      "Nouns: I, everyone, this moment\n",
+      "----------------------------------------\n",
+      "Sentence 9: Believe in yourselves, believe in your future, and believe, once more, in America.\n",
+      "Nouns: yourselves, your future, America\n",
+      "----------------------------------------\n",
+      "Sentence 10: Thank you, God bless you, and God bless the United States.\n",
+      "Nouns: you, God, you, God, the United States\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
-    "file = open(\"./datasets/trump.txt\", \"r\",encoding='utf-8') \n",
+    "file = open(\"./trump.txt\", \"r\",encoding='utf-8') \n",
     "trump = file.read() \n",
     "\n",
-    "### here comes your code\n"
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "doc = nlp(trump)\n",
+    "recent_sentences = list(doc.sents)[-10:]\n",
+    "\n",
+    "for idx, sent in enumerate(recent_sentences, start=1):\n",
+    "    print(f\"Sentence {idx}: {sent.text.strip()}\")\n",
+    "    nouns = [chunk.text for chunk in sent.noun_chunks]\n",
+    "    \n",
+    "    if nouns:\n",
+    "        print(\"Nouns:\", \", \".join(nouns))\n",
+    "    else:\n",
+    "        print(\"No nouns found in this sentence.\")\n",
+    "    \n",
+    "    print(\"-\" * 40) \n"
    ]
   },
   {
