implement nlp exercise 4

--- a/106_NLP_Exercises.ipynb
+++ b/106_NLP_Exercises.ipynb
@@ -213,9 +213,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 1 1 0 0 1 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0]\n",
+      " [0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0]\n",
+      " [0 1 0 0 0 1 0 0 0 0 0 0 1 0 1 0 1 0 1 1 0 0 1 0 1 0 0 0 0 1 1]\n",
+      " [1 0 0 0 2 0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 1 1 2 1 0 0 1 0 1 0 0]]\n",
+      "['a', 'as', 'bag', 'based', 'below', 'can', 'counting', 'document', 'documents', 'gives', 'is', 'matrix', 'most', 'multiple', 'occur', 'occurences', 'of', 'on', 'once', 'only', 'pretty', 'really', 'see', 'sparse', 'the', 'third', 'this', 'throughout', 'us', 'words', 'you']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import spacy\n",
@@ -224,9 +247,7 @@
     "    \"\"\"Basic BoW implementation.\"\"\"\n",
     "    \n",
     "    __nlp = spacy.load(\"en_core_web_sm\")\n",
-    "    __bow_list = []\n",
-    "    \n",
-    "    # your code goes maybe also here    \n",
+    "    __bow_list = []  \n",
     "    \n",
     "    def fit_transform(self, corpus: list):\n",
     "        \"\"\"Transform list of strings into BoW array.\n",
@@ -242,8 +263,23 @@
     "                Matrix representation of BoW\n",
     "\n",
     "        \"\"\"\n",
-    "        # your code goes here        \n",
-    "        return None\n",
+    "        tokenized_docs = []\n",
+    "        for document in corpus:\n",
+    "                parsed_doc = self.__nlp(document)\n",
+    "                tokens = [token.text.lower() for token in parsed_doc if not token.is_punct]\n",
+    "                tokenized_docs.append(tokens)\n",
+    "        \n",
+    "        self.__bow_list = sorted({word for tokens in tokenized_docs for word in tokens})\n",
+    "        num_docs = len(tokenized_docs)\n",
+    "        vocab_size = len(self.__bow_list)\n",
+    "        bow_matrix = np.zeros((num_docs, vocab_size), dtype=int)\n",
+    "        \n",
+    "        for doc_index, tokens in enumerate(tokenized_docs):\n",
+    "                for token in tokens:\n",
+    "                        col_index = self.__bow_list.index(token)\n",
+    "                        bow_matrix[doc_index, col_index] += 1\n",
+    "                \n",
+    "        return bow_matrix\n",
     "      \n",
     "\n",
     "    def get_feature_names(self) -> list:\n",
@@ -255,8 +291,7 @@
     "                Words being transformed by fit function\n",
     "\n",
     "        \"\"\"   \n",
-    "        # your code goes here\n",
-    "        return None\n",
+    "        return self.__bow_list\n",
     "\n",
     "corpus = [\n",
     "     'Bag Of Words is based on counting',\n",
@@ -271,7 +306,7 @@
     "X = vectorizer.fit_transform(corpus)\n",
     "print(X)\n",
     "\n",
-    "vectorizer.get_feature_names()\n",
+    "print(vectorizer.get_feature_names())\n",
     "len(vectorizer.get_feature_names())"
    ]
   },
