implement nlp exercise 5

--- a/106_NLP_Exercises.ipynb
+++ b/106_NLP_Exercises.ipynb
@@ -326,10 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import nltk\n",
     "from nltk.book import *\n",
     "\n",
     "wall_street = text7.tokens\n",
@@ -383,22 +384,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "But they have their discos and their dances and they just drift away. Mr. Hammond worries that old age and the flightiness of youth will diminish the ranks of the East Anglian group that keeps the Aslacton bells pealing. History after all is not on his side. According to a nationwide survey taken a year ago nearly a third of England church bells are no longer rung on Sundays because there is no one 0 to ring them. It is easy to see why the ancient art is on the ropes. The less complicated version of playing tunes on bells as do the carillons of continental Europe is considered by the English to be childish fit only for foreigners.\n"
+     ]
+    }
+   ],
    "source": [
-    "def clean_generated():\n",
-    "    # put your code here\n",
-    "    pass\n",
+    "def clean_generated(text):\n",
+    "    text = re.sub(r'\\s+([.!?])', r'\\1', text)\n",
+    "    \n",
+    "    def cap_initial(match):\n",
+    "        prefix = match.group(1)\n",
+    "        letter = match.group(2).upper()\n",
+    "        return prefix + letter\n",
+    "    \n",
+    "    text = re.sub(r'(^|[.!?]\\s+)([a-z])', cap_initial, text)\n",
+    "    return text\n",
     "\n",
-    "N=3 # fix it for other value of N\n",
-    "\n",
+    "N=5 \n",
     "SEP=\" \"\n",
-    "\n",
-    "sentence_count=5\n",
+    "sentence_count=7\n",
     "\n",
     "ngrams = build_ngrams()\n",
-    "start_seq=\"We have\"\n",
+    "start_seq=None\n",
     "\n",
     "counts = ngram_freqs(ngrams)\n",
     "\n",
@@ -410,7 +424,7 @@
     "    generated += SEP + next_word(generated, N, counts)\n",
     "    sentences += 1 if generated.endswith(('.','!', '?')) else 0\n",
     "\n",
-    "# put your code here:\n",
+    "generated = clean_generated(generated)\n",
     "\n",
     "print(generated)"
    ]
